--- a/2023_fall/lec11/lec11_notebook.ipynb
+++ b/2023_fall/lec11/lec11_notebook.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f0c7fd4d",
    "metadata": {},
    "outputs": [
@@ -72,12 +72,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: SpeechRecognition in /Users/jhasegaw/anaconda3/lib/python3.10/site-packages (3.10.0)\r\n",
-      "Requirement already satisfied: requests>=2.26.0 in /Users/jhasegaw/anaconda3/lib/python3.10/site-packages (from SpeechRecognition) (2.29.0)\r\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/jhasegaw/anaconda3/lib/python3.10/site-packages (from requests>=2.26.0->SpeechRecognition) (3.4)\r\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jhasegaw/anaconda3/lib/python3.10/site-packages (from requests>=2.26.0->SpeechRecognition) (2023.7.22)\r\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/jhasegaw/anaconda3/lib/python3.10/site-packages (from requests>=2.26.0->SpeechRecognition) (1.26.15)\r\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/jhasegaw/anaconda3/lib/python3.10/site-packages (from requests>=2.26.0->SpeechRecognition) (2.0.4)\r\n"
+      "Collecting SpeechRecognition\n",
+      "  Downloading SpeechRecognition-3.10.1-py2.py3-none-any.whl (32.8 MB)\n",
+      "     --------------------------------------- 32.8/32.8 MB 12.6 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: requests>=2.26.0 in c:\\users\\wisel\\anaconda3\\lib\\site-packages (from SpeechRecognition) (2.28.1)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\wisel\\anaconda3\\lib\\site-packages (from SpeechRecognition) (4.4.0)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\wisel\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\wisel\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (1.26.14)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\wisel\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\wisel\\anaconda3\\lib\\site-packages (from requests>=2.26.0->SpeechRecognition) (2023.11.17)\n",
+      "Installing collected packages: SpeechRecognition\n",
+      "Successfully installed SpeechRecognition-3.10.1\n"
      ]
     }
    ],
@@ -473,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b8c8138f",
    "metadata": {},
    "outputs": [
@@ -483,17 +488,7 @@
      "text": [
       "Help on function transcribe_wavefile in module homework11:\n",
       "\n",
-      "transcribe_wavefile(filename, language='en')\n",
-      "    Use sr.Recognizer.AudioFile(filename) as the source,\n",
-      "    recognize from that source,\n",
-      "    and return the recognized text.\n",
-      "    \n",
-      "    @params:\n",
-      "    filename (str) - the filename from which to read the audio\n",
-      "    language (str) - the language of the audio (optional; default is English)\n",
-      "    \n",
-      "    @returns:\n",
-      "    text (str) - the recognized speech\n",
+      "transcribe_wavefile(filename, language='en-US')\n",
       "\n"
      ]
     }
@@ -514,20 +509,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "0ab6ecae",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "FAIL!!  You need to change this function so it works!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m importlib\u001b[38;5;241m.\u001b[39mreload(homework11)\n\u001b[0;32m----> 3\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[43mhomework11\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtranscribe_wavefile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m264752__copyc4t__phone-messages-english-and-italian.flac\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(text)\n",
-      "File \u001b[0;32m~/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py:16\u001b[0m, in \u001b[0;36mtranscribe_wavefile\u001b[0;34m(filename, language)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtranscribe_wavefile\u001b[39m(filename, language\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124men\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m      4\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;03m    Use sr.Recognizer.AudioFile(filename) as the source,\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;03m    recognize from that source,\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;124;03m    text (str) - the recognized speech\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFAIL!!  You need to change this function so it works!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: FAIL!!  You need to change this function so it works!"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thank you please wait for assistance\n"
      ]
     }
    ],
@@ -554,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "38daa6fc",
    "metadata": {},
    "outputs": [
@@ -562,109 +552,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EFE\n",
-      "======================================================================\n",
-      "ERROR: test_method_returns_str (grade.Test)\n",
+      "...\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 25, in test_method_returns_str\n",
-      "    transcription = homework11.transcribe_wavefile(\"webdata.wav\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
+      "Ran 3 tests in 5.234s\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_method_works_with_known_input (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 35, in test_method_works_with_known_input\n",
-      "    transcription = homework11.transcribe_wavefile(filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_method_runs (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 18, in test_method_runs\n",
-      "    transcription = homework11.transcribe_wavefile(\"webdata.wav\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 20, in test_method_runs\n",
-      "    self.fail(\"homework11.transcribe_wavefile does not run (has errors)\")\n",
-      "AssertionError: homework11.transcribe_wavefile does not run (has errors)\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.003s\n",
-      "\n",
-      "FAILED (failures=1, errors=2)\n",
-      "EFE\n",
-      "======================================================================\n",
-      "ERROR: test_method_returns_str (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 25, in test_method_returns_str\n",
-      "    transcription = homework11.transcribe_wavefile(\"webdata.wav\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "======================================================================\n",
-      "ERROR: test_method_works_with_known_input (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 35, in test_method_works_with_known_input\n",
-      "    transcription = homework11.transcribe_wavefile(filename)\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "======================================================================\n",
-      "FAIL: test_method_runs (grade.Test)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 18, in test_method_runs\n",
-      "    transcription = homework11.transcribe_wavefile(\"webdata.wav\")\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/homework11.py\", line 16, in transcribe_wavefile\n",
-      "    raise RuntimeError(\"FAIL!!  You need to change this function so it works!\")\n",
-      "RuntimeError: FAIL!!  You need to change this function so it works!\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py\", line 20, in test_method_runs\n",
-      "    self.fail(\"homework11.transcribe_wavefile does not run (has errors)\")\n",
-      "AssertionError: homework11.transcribe_wavefile does not run (has errors)\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 0.003s\n",
-      "\n",
-      "FAILED (failures=1, errors=2)\n"
+      "OK\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n",
-      "0 successes out of 3 tests run\n",
-      "Score: 0%\n"
+      "3 successes out of 3 tests run\n",
+      "Score: 100%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'grade' from '/Users/jhasegaw/Dropbox/mark/teaching/kcgi/intro_speech_understanding/2023_fall/lec11/grade.py'>"
+       "<module 'grade' from 'C:\\\\Users\\\\wisel\\\\Documents\\\\GitHub\\\\intro_speech_understanding\\\\2023_fall\\\\lec11\\\\grade.py'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
